<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.startup.LogInFragment"
                                                   android:id="@+id/frameLayout5"
                                                   android:background="@color/colorPrimaryDark">

    <Button
            android:text="@string/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
            app:layout_constraintVertical_bias="0.0"
            android:theme="@style/Butt"
            android:textColor="@color/colorAccent"/>

    <Button
            android:text="@string/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:theme="@style/Butt"
            android:textColor="@color/colorAccent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputStartUp"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="244dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textInputLayout4"
            app:layout_constraintHorizontal_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLight"
                android:hint="@string/user_email"
                android:id="@+id/login_username"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputStartUp"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            android:id="@+id/textInputLayout7">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLight"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:id="@+id/login_password"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="@string/notuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginProgressBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"/>

    <TextView
            android:text="Or Sign In with Google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            android:layout_marginTop="8dp"/>

    <Button
            android:text="@string/google_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/googleSignInBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:theme="@style/Butt"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>

</androidx.constraintlayout.widget.ConstraintLayout>