<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
        android:id="@id/welcomeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@id/userProfileFragment"
        android:icon="@drawable/ic_baseline_person"
        android:title="@string/profile"/>
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_baseline_chat"
        android:title="@string/chat" />
    <item
        android:id="@id/add_vinyl"
        android:icon="@drawable/plus_circle_outline"
        android:title="@string/add_vinyl_menu"/>
</menu>