<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.main.NoVinylFragment"
        android:id="@+id/frameLayout2"
        android:background="@color/colorPrimaryDark">

    <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/norecord"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43"
            android:textColor="@color/colorAccent"/>

    <Button
            android:id="@+id/move_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_vinyl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintVertical_bias="0.089"
            android:theme="@style/Butt"
            android:textColor="@color/colorAccent"/>
</androidx.constraintlayout.widget.ConstraintLayout>